[[es-release-notes]]
= Release notes

[partintro]
--

This section summarizes the changes in each release.

* <<release-notes-8.1.1>>
* <<release-notes-8.1.0>>
* <<release-notes-8.0.1>>
* <<release-notes-8.0.0>>
* <<release-notes-8.0.0-rc2>>
* <<release-notes-8.0.0-rc1>>
* <<release-notes-8.0.0-beta1>>
* <<release-notes-8.0.0-alpha2>>
* <<release-notes-8.0.0-alpha1>>

--

include::release-notes/8.1.asciidoc[]
include::release-notes/8.0.asciidoc[]
include::release-notes/8.0.0-rc2.asciidoc[]
include::release-notes/8.0.0-rc1.asciidoc[]
include::release-notes/8.0.0-beta1.asciidoc[]
include::release-notes/8.0.0-alpha2.asciidoc[]
include::release-notes/8.0.0-alpha1.asciidoc[]
