@@ -1,0 +1,77 @@
+[[release-notes-8.0.1]]
+== {es} version 8.0.1
+
+Also see <<breaking-changes-8.0,Breaking changes in 8.0>>.
+
+[[bug-8.0.1]]
+[float]
+=== Bug fixes
+
+Aggregations::
+* Fix backward compatibility with 7.17.0 {es-pull}83715[#83715]
+
+Distributed::
+* Correctly handle large zones with 500 or more instances {es-pull}83785[#83785] (issue: {es-issue}83783[#83783])
+
+ILM+SLM::
+* Do not allow negative age in explain lifecycle API response {es-pull}84043[#84043]
+
+Infra/Core::
+* Copy `trace.id` in threadcontext stash {es-pull}83218[#83218]
+* Preserve context in `ResultDeduplicator` {es-pull}84038[#84038] (issue: {es-issue}84036[#84036])
+* Update system index mappings if `_meta` is null {es-pull}83896[#83896] (issue: {es-issue}83890[#83890])
+
+Ingest::
+* Fix `GeoIpDownloader` startup during rolling upgrade {es-pull}84000[#84000]
+* Short circuit date patterns after first match {es-pull}83764[#83764]
+
+Machine Learning::
+* Retry anomaly detection job recovery during relocation {es-pull}83456[#83456]
+
+Packaging::
+* Add `log4j-slf4j-impl` to `repository-azure` {es-pull}83661[#83661] (issue: {es-issue}83652[#83652])
+
+Recovery::
+* Add missing `indices.recovery.internal_action_retry_timeout` to list of settings {es-pull}83354[#83354]
+
+SQL::
+* Fix txt format for empty result sets {es-pull}83376[#83376]
+
+Search::
+* Avoid eagerly loading `StoredFieldsReader` in fetch phase {es-pull}83693[#83693] (issue: {es-issue}82777[#82777])
+* Returns valid PIT when no index matched {es-pull}83424[#83424]
+
+Security::
+* Upgrade jANSI dependency to 2.4.0 {es-pull}83566[#83566]
+
+Snapshot/Restore::
+* Move get snapshots serialization to management pool {es-pull}83215[#83215]
+* Preserve context in `snapshotDeletionListeners` {es-pull}84089[#84089] (issue: {es-issue}84036[#84036])
+
+Transform::
+* Fix condition on which the transform stops processing buckets {es-pull}82852[#82852]
+
+Watcher::
+* Tolerate empty types array in Watch definitions {es-pull}83524[#83524] (issue: {es-issue}83235[#83235])
+
+[[enhancement-8.0.1]]
+[float]
+=== Enhancements
+
+Infra/REST API::
+* Update YAML REST tests to check for product header on all responses {es-pull}83290[#83290]
+
+Recovery::
+* Adjust `indices.recovery.max_bytes_per_sec` according to external settings {es-pull}82819[#82819]
+
+[[upgrade-8.0.1]]
+[float]
+=== Upgrades
+
+Geo::
+* Update vector tiles google protobuf to 3.16.1 {es-pull}83402[#83402]
+
+Packaging::
+* Bump bundled JDK to 17.0.2+8 {es-pull}83243[#83243] (issue: {es-issue}83242[#83242])
+
+
