@@ -1,66 +1,3 @@
-[[release-notes-8.1.1]]
-== {es} version 8.1.1
-
-Also see <<breaking-changes-8.1,Breaking changes in 8.1>>.
-
-[[bug-8.1.1]]
-[float]
-=== Bug fixes
-
-Analysis::
-* Fix `min_hash` configuration settings names {es-pull}84753[#84753] (issue: {es-issue}84578[#84578])
-
-EQL::
-* Clean any used memory by the sequence matcher and circuit breaker used bytes in case of exception {es-pull}84451[#84451]
-
-Engine::
-* Increase store ref before snapshotting index commit {es-pull}84776[#84776]
-
-ILM+SLM::
-* Invoke initial `AsyncActionStep` for newly created indices {es-pull}84541[#84541] (issue: {es-issue}77269[#77269])
-
-Indices APIs::
-* Remove existing `indices/datastreams/aliases` before simulating index template {es-pull}84675[#84675] (issue: {es-issue}84256[#84256])
-
-Infra/Core::
-* Fix `NullPointerException` in `SystemIndexMetadataUpgradeService` hidden alias handling {es-pull}84780[#84780] (issue: {es-issue}81411[#81411])
-* Require and preserve content type for filtered rest requests {es-pull}84914[#84914] (issue: {es-issue}84784[#84784])
-* Wrap thread creation in `doPrivileged` call {es-pull}85180[#85180]
-
-Infra/REST API::
-* Correctly return `_type` field for documents in V7 compatiblity mode {es-pull}84873[#84873] (issue: {es-issue}84173[#84173])
-
-Ingest::
-* Backport mark `GeoIpDownloaderTask` as completed after cancellation #84028 {es-pull}85014[#85014] (issues: {es-issue}84028[#84028], {es-issue}84652[#84652])
-* `CompoundProcessor` should also catch exceptions when executing a processor {es-pull}84838[#84838] (issue: {es-issue}84781[#84781])
-
-Machine Learning::
-* Fix Kibana date format and similar overrides in text structure endpoint {es-pull}84967[#84967]
-* Fixes for multi-line start patterns in text structure endpoint {es-pull}85066[#85066]
-* Return all datafeeds in get anomaly detection jobs API {es-pull}84759[#84759]
-
-Packaging::
-* Remove use of Cloudflare zlib {es-pull}84680[#84680]
-
-Search::
-* Fix point visitor in `DiskUsage` API {es-pull}84909[#84909]
-* `DotExpandingXContentParser` to expose the original token location {es-pull}84970[#84970]
-
-Snapshot/Restore::
-* Don't fail if there no symlink for AWS Web Identity Token {es-pull}84697[#84697]
-* Lookup AWS Region for STS Client from STS endpoint {es-pull}84585[#84585] (issue: {es-issue}83826[#83826])
-
-[[enhancement-8.1.1]]
-[float]
-=== Enhancements
-
-SQL::
-* Forward warning headers to JDBC driver {es-pull}84499[#84499]
-
-Watcher::
-* Add list of allowed domains for Watcher email action {es-pull}84894[#84894] (issue: {es-issue}84739[#84739])
-
-
 [[release-notes-8.1.0]]
 == {es} version 8.1.0
 
